src/tui/snapshots/sirbone__tui__run__snapshots__idle_screen.snap
---
source: src/tui/run.rs
assertion_line: 2179
expression: render(&mut app)
---
"┌ sirbone ───────────────────────────────────────┐╭ Chronika ──────────────────╮"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"└────────────────────────────────────────────────┘╰────────────────────────────╯"
"     Tab focus  ↑↓ scroll  ⌥B trail  ⌥P palette  ⌥A about  ⌥S settings  ^C quit "
"╭ › ───────────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  anthropic  ·  claude-opus  ·  ctx ░░░░░░░░░░ 0%  ·  theme:sirbone             "
