src/tui/snapshots/sirbone__tui__run__snapshots__prompt_dialog_open.snap
---
source: src/tui/run.rs
assertion_line: 2236
expression: render(&mut app)
---
"┌ sirbone ───────────────────────────────────────┐╭ Chronika ──────────────────╮"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│                                                ││                            │"
"│               ┌ ⚠ permission ────────────────────────────────┐               │"
"│               │ permission required                          │               │"
"│               │   rm -rf build/                              │               │"
"│               │                                              │               │"
"│               │ ❯ Allow once                                 │               │"
"│               │   Allow always  rm *                         │               │"
"│               │   Deny                                       │               │"
"│               │                                              │               │"
"│               │ ↑↓ move · enter confirm · e edit · esc cancel│               │"
"│               └──────────────────────────────────────────────┘               │"
"│                                                ││                            │"
"└────────────────────────────────────────────────┘╰────────────────────────────╯"
"     Tab focus  ↑↓ scroll  ⌥B trail  ⌥P palette  ⌥A about  ⌥S settings  ^C quit "
"╭ › ───────────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  anthropic  ·  claude-opus  ·  ctx ░░░░░░░░░░ 0%  ·  theme:sirbone             "
